# Movies-Performance-Predictor

./: README.MD
movies-performance-predictor/: .prettierrc  README.md  ReactRouter7Guide.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
movies-performance-predictor/app/: app.css  layout.tsx  root.tsx  routes.ts  types.ts
movies-performance-predictor/app/routes/: History.tsx  PredictionForm.tsx  dashboard.tsx
movies-performance-predictor/app/services/: moviePredictionService.ts
server/: pyproject.toml
server/server/: app.py  data_preparation.py  helper_functions_and_constants.py  modeling.py
server/server/data/: financial_models.pkl
