[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Addala Raed <addala.raed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
